fix(spark): auto-pin a Spark-compatible JDK (17/21), clear error on 24+
Root cause of the notebook Py4JJavaError: Spark 4.x init reflectively loads
jdk.internal.ref.Cleaner, removed in JDK 24+, so SparkContext fails on the
box's JDK 26 (ClassNotFoundException; --add-opens cannot fix a missing class).

get_spark() now resolves JAVA_HOME to an installed Java 17/21 (find_compatible_jdk,
scans JAVA_HOME + common locations), accepts java_home=, prints the chosen JDK,
and raises an actionable RuntimeError (pacman/apt/brew/sdkman hints) instead of
a cryptic Py4J trace when only an unsupported JDK is present. Notebook env-setup
markdown + strategy doc corrected (JDK 24+ does NOT 'often run').

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>